--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
   Message Sent!
   Thanks for completing the form. We'll be in touch soon!
-  <div id="#root"></div>
+  <div id="root"></div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="https://www.jakubzacher.pl" target="_blank">Jakub Zacher</a>.
