--- a/public/index.html
+++ b/public/index.html
@@ -10,38 +10,12 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-
-  Contact Us
-
-  First Name
-  This field is required
-
-  Last Name
-  This field is required
-
-  Email Address
-  Please enter a valid email address
-  This field is required
-
-  Query Type
-  General Enquiry
-  Support Request
-  Please select a query type
-
-  Message
-  This field is required
-
-  
-  To submit this form, please consent to being contacted
-
-  Submit
-
-  Message Sent!
+  Message Sent!f
   Thanks for completing the form. We'll be in touch soon!
   <div id="root"></div>
   <div class="attribution">
