--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,11 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center;}
+    .attribution { font-size: 11px; text-align: center; margin: 20px 0px;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  Message Sent!f
-  Thanks for completing the form. We'll be in touch soon!
   <div id="root"></div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
